fix: Update build number label for clarity and increase z-index for improved UI layering

--- a/src/ui/styles/App.css
+++ b/src/ui/styles/App.css
@@ -121,7 +121,7 @@
 	font-size: 1.1em;
 	-webkit-app-region: drag;
 	user-select: none;
-	z-index: 9999;
+	z-index: 20000;
 	top: 0;
 	left: 0;
 }
